Fix: Correct CSS GAP issues in layout

--- a/src/sass/base/_utilities.scss
+++ b/src/sass/base/_utilities.scss
@@ -237,9 +237,6 @@
 .align-items-center {
   align-items: center;
 }
-.gap-1 {
-  gap: 1rem;
-}
 
 blockquote {
   border-left: 4px solid $color-brand-orange;
